--- a/IMS.WebApp/Controls/InventoryListItemComponent.razor
+++ b/IMS.WebApp/Controls/InventoryListItemComponent.razor
@@ -1,7 +1,7 @@
 ﻿
 @if (Inventories != null && Inventories.Count > 0)
 {
-    @foreach (var inventory in Inventories)
+    foreach (var inventory in Inventories)
     {
         <tr>
             <td>@inventory.InventoryName</td>
