--- a/IMS.WebApp/Pages/Index.razor
+++ b/IMS.WebApp/Pages/Index.razor
@@ -1,24 +1,4 @@
 ﻿@page "/"
 
-@inject IViewInventoryByNameUseCase ViewInventoryByNameUseCase
+<h2>Hello World!</h2>
 
-
-
-<PageTitle>Test Page</PageTitle>
-<ul>
-    @foreach(var inv in _inventories)
-    {
-        <li>
-            @inv.InventoryName
-        </li>
-    }
-</ul>
-
-@code {
-    private List<Inventory> _inventories = new List<Inventory>();
-
-    protected override async Task OnInitializedAsync()
-    {
-       _inventories = (await ViewInventoryByNameUseCase.ExecuteAsync()).ToList();
-    }
-}
