--- a/IMS.WebApp/Pages/Inventories/InventoryList.razor
+++ b/IMS.WebApp/Pages/Inventories/InventoryList.razor
@@ -1,5 +1,6 @@
-﻿@page "/investories"
+﻿@page "/inventories"
 
+@inject NavigationManager NavigationManager
 
 <h3>InventoryList</h3>
 <br>
@@ -8,6 +9,9 @@
 <br />
 
 <InventoryListComponent SearchTerm="@searchTerm"></InventoryListComponent>
+<br />
+
+<button type="button" class="btn btn-primary" @onclick="AddInventory">Add Inventory</button>
 
 
 @code {
@@ -16,5 +20,10 @@
     private void OnInventorySearch(string searchTerm)
     {
         this.searchTerm = searchTerm;
+    }
+
+    private void AddInventory()
+    {
+        NavigationManager.NavigateTo("/addinventory");
     }
 }
