--- a/IMS.WebApp/_Imports.razor
+++ b/IMS.WebApp/_Imports.razor
@@ -10,4 +10,4 @@
 @using IMS.WebApp.Shared
 @using IMS.UseCases.Inventories.Interfaces
 @using IMS.CoreBusiness
-@using IMS.WebApp.Controls
+@using IMS.WebApp.Controls.Inventories
