--- a/IMS.WebApp/_Imports.razor
+++ b/IMS.WebApp/_Imports.razor
@@ -11,3 +11,4 @@
 @using IMS.UseCases.Inventories.Interfaces
 @using IMS.CoreBusiness
 @using IMS.WebApp.Controls.Inventories
+@using IMS.UseCases.Products.Interfaces
